# Coding_Problems-

./: CMakeLists.txt  README.md
src/: AppliedEmbedded.h  BitHacks.c  BitHacks.h  CMakeLists.txt  main.cpp
src/AppliedEmbedded/: AppliedEmbedded.c  AppliedEmbedded.h
src/ArraysAndStrings/: Arrays_Strings.cpp  Arrays_Strings.h
src/BitHacks/: BitHacks.c  BitHacks.h
tests/: BitHacksTestSuite.cpp  CMakeLists.txt  StringsTestSuite.cpp  main.cpp
